--- a/de.html
+++ b/de.html
@@ -350,7 +350,7 @@
                 <div class="row">
                   <div class="col-md-4 skill-holder">
                     <div class="skill-button skill-others-active-button">
-                      <a class="btn btn-general" id="btn-skill-others-git" role="button">Git</a>
+                      <a class="btn btn-general" id="btn-skill-others-git" role="button">DevOps Tools</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-others-comptia" role="button">Agile Softwareentwicklung</a>
@@ -364,9 +364,11 @@
                   </div>
                   <div class="col-md-8 skill-information" id="skill-others-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Git</h4>
-                      <p class="text-justify">Ich habe ein klares Verständnis von Git und wie es funktioniert. Normalerweise arbeite ich mit Git mithilfe von CLI, aber ich kann auch die Git-GUI verwenden.</p>
+                      <h4 class="text-center">DevOps Tools</h4>
+                      <p class="text-justify">Ich habe ein solides Verständnis von Git und wie es funktioniert. Eigentlich (wie es offensichtlich ist) habe ich meine Website auf GitHub gehostet. Ich bin auch ziemlich vertraut mit der Docker-Welt.</p>
                       <ul class="text-left">
+                        <li><em>Git</em></li>
+                        <li><em>Docker</em></li>
                       </ul>
                     </div>
                   </div>
@@ -509,6 +511,7 @@
                 <h5>Teheran, Iran</h5>
                 <p><i>Ich habe als leitender Forscher im Circuit Design Lab des Electronics Research Center (ERC) gearbeitet.<br>
                   Meine Hauptaufgabe war es, mit meiner Wissenschaft und meinen Ideen Master- und Doktoranden dabei zu helfen, die Probleme zu überwinden, auf die sie auf dem Weg zum Abschluss stoßen.<br>
+                  Das Unterrichten von maschinellem Lernen, Deep Learning und Python-Programmierung war ebenfalls eine meiner Pflichten. <br>
                   Die Wartung von Computern und Laboreinrichtung lag auch in meiner Verantwortung.</i></p>
               </div>
             </div>
