--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <div class="row">
                   <div class="col-md-4 skill-holder">
                     <div class="skill-button skill-others-active-button">
-                      <a class="btn btn-general" id="btn-skill-others-git" role="button">Git</a>
+                      <a class="btn btn-general" id="btn-skill-others-git" role="button">DevOps Tools</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-others-comptia" role="button">Agile Software Development</a>
@@ -362,9 +362,11 @@
                   </div>
                   <div class="col-md-8 skill-information" id="skill-others-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Git</h4>
-                      <p class="text-justify">I have a solid understanding of Git and how it works. I usually work with Git with the help of CLI but I can imagine myself using the Git GUI as well.</p>
+                      <h4 class="text-center">DevOps Tools</h4>
+                      <p class="text-justify">I have a solid understanding of Git and how it works. As a matter of facts (as it's obvious), I hosted my website on GitHub. I am also quite familiar with the Docker world.</p>
                       <ul class="text-left">
+                        <li><em>Git</em></li>
+                        <li><em>Docker</em></li>
                       </ul>
                     </div>
                   </div>
@@ -507,6 +509,7 @@
                 <h5>Tehran, Iran</h5>
                 <p><i>I worked as the head-researcher in Circuit Design Lab in Electronics Research Center (ERC).<br>
                   My main responsibility was to support Master's and PhD students to overcome the problems they encounter in their way to graduation with my knowledge and ideas.<br>
+                  Teaching Machine Learning, Deep Learning, and Python programming was also one of my duties. <br>
                   Maintaining computers and equipment in the lab was my other responsibility.</i></p>
               </div>
             </div>
