adding RL, NLP and CV to resume

--- a/de.html
+++ b/de.html
@@ -263,7 +263,7 @@
                   <div class="col-md-8 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
                       <h4 class="text-center">Maschinelles Lernen</h4>
-                      <p class="text-justify">Ich mag künstliche Intelligenz sehr gern. Daher habe ich die verwandten Algorithmen studiert, um ein Meister in diesem Bereich zu werden. Algorithmen zum klassischen maschinellen Lernen, Deep Learning, bestärkenden Lernen und Computerlinguistik sind die Hauptthemen, über die ich in den letzten Jahren studiert habe. Ich habe auch die Erfahrung, Studenten einige dieser Algorithmen beizubringen.</p>
+                      <p class="text-justify">Ich mag künstliche Intelligenz sehr gern. Daher habe ich die verwandten Algorithmen studiert, um ein Meister in diesem Bereich zu werden. Algorithmen zum Computer Vision, bestärkenden Lernen und Verarbeitung natürlicher Sprache sind die Hauptthemen, über die ich in den letzten Jahren studiert habe. Ich habe auch die Erfahrung, Studenten einige dieser Algorithmen beizubringen.</p>
                       <ul class="text-left">
                         <li><em>Sci-Kit Learn / MLlib</em></li>
                         <li><em>TensorFlow / PyTorch</em></li>
