change the thema

--- a/de.html
+++ b/de.html
@@ -457,7 +457,7 @@
                 <p class="edu-font"><b>Iranische Universität für Wissenschaft und Teschnologie</b></p>
                 <p class="edu-font"><i>September 2016 - Juli 2018</i></p>
                 <p>Note: 18.27 von 20</p>
-                <p>Thema der Masterarbeit: DPA (Differntial Power Analysis)-resistente Kryptographie für IoT-Zwecke</p>
+                <p>Thema der Masterarbeit: Emotionserkennung mit Convolutional Neural Networks</p>
                 <p>Betreuer: Dr. Sattar Mirzakuchaki</p>
               </div>
             </div>
