--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                 <p class="edu-font"><b>Iran University of Science and Technology</b></p>
                 <p class="edu-font"><i>September 2016 - July 2018</i></p>
                 <p>GPA: 18.27 out of 20</p>
-                <p>Thesis Topic: DPA Resistant Cryptography for IoT Purposes</p>
+                <p>Thesis Topic: Emotion Recognition with Convolutional Neural Networks</p>
                 <p>Supervisor: Dr. Sattar Mirzakuchaki</p>
               </div>
             </div>
