researcher to AI researcher

--- a/de.html
+++ b/de.html
@@ -506,7 +506,7 @@
             </div>
             <div class="col-md-5 text-left wow fadeInRight" data-wow-duration="2s">
               <div class="experience-container">
-                <h3>Forscher</h3>
+                <h3>AI Forscher</h3>
                 <h4>Iranische Universität für Wissenschaft und Technologie</h4>
                 <h5>Teheran, Iran</h5>
                 <p><i>Ich habe als leitender Forscher im Circuit Design Lab des Electronics Research Center (ERC) gearbeitet.<br>
