--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             </div>
             <div class="col-md-5 text-left wow fadeInRight" data-wow-duration="2s">
               <div class="experience-container">
-                <h3>Reseracher</h3>
+                <h3>AI Reseracher</h3>
                 <h4>Iran University of Science and Technology</h4>
                 <h5>Tehran, Iran</h5>
                 <p><i>I worked as the head-researcher in Circuit Design Lab in Electronics Research Center (ERC).<br>
