deleting electronics engineer

--- a/de.html
+++ b/de.html
@@ -89,7 +89,7 @@
           
           <div id="home-heading">
             <h1 id="home-heading-name">Arash Heidari</h1> <br>
-            <h1 id="home-heading-title">Ingenieur für Maschinelles Lernen <br><span>&</span><br>Elektrotechnik</h1>
+            <h1 id="home-heading-title">Ingenieur für Maschinelles Lernen</h1>
           </div>
           
           <div id="home-btn">
