--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           
           <div id="home-heading">
             <h1 id="home-heading-name">Arash Heidari</h1> <br>
-            <h1 id="home-heading-title">Machine Learning<br><span>&</span><br>Electronics Engineer</h1>
+            <h1 id="home-heading-title">Machine Learning Engineer</h1>
           </div>
           
           <div id="home-btn">
