--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                   <div class="col-md-8 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
                       <h4 class="text-center">Machine Learning</h4>
-                      <p class="text-justify">I am quite fond of artificial intelligence. Therefore, I have studied the related algorithms to become a master in this filed. Computer vision, reinforcement learning, and natural language processing algorithms are the main topics I studied about in the last few years. I also have the experience to teach some of these algorithms to students. </p>
+                      <p class="text-justify">I am quite fond of artificial intelligence. Therefore, I have studied the related algorithms to become a master in this filed. Computer vision, reinforcement learning, GANs, and natural language processing are the main topics I studied about in the last few years. I also have the experience to teach some of these algorithms to students. </p>
                       <ul class="text-left">
                         <li><em>Sci-Kit Learn / MLlib</em></li>
                         <li><em>TensorFlow / PyTorch</em></li>
