--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <br>
                     I currently work at the Electronics Research Center (ERC) at Iran University of Science and Technology (IUST) as a researcher. My main responsibility is to help Master's and PhD students to overcome the problems they encounter in their way to graduation. I also have the experience to work as an English translator, which sharpened my English skills. <br>
                     <br>
-                    Machine Learning and Embedded software engineering are my main specialities. I studied machine learning algorithms in the last few years to become a master in this area. Computer vision, reinforcement learning, GANs, and natural language processing are the main topics I studied about. I have the experience to work with both TensorFlow (and of course Keras API) and PyTorch frameworks as well. You can find out more about my skills in the Skills section. <br>
+                    Machine Learning is my main speciality. I studied machine learning algorithms in the last few years to become a master in this area. Computer vision, reinforcement learning, GANs, and natural language processing are the main topics I studied about. I have the experience to work with both TensorFlow (and of course Keras API) and PyTorch frameworks as well. You can find out more about my skills in the Skills section. <br>
                     <br>
                     Furthermore, one of my interests is programming. I have an excellent command of some of the programming languages such as Python, JavaScript, C/C++, etc. My field of interest in the programming domain, other than embedded software development, is GUI Design and Web Development. <br>
                     <br>
