change in AI Researcher job description

--- a/de.html
+++ b/de.html
@@ -509,8 +509,7 @@
                 <h3>AI Forscher</h3>
                 <h4>Iranische Universität für Wissenschaft und Technologie</h4>
                 <h5>Teheran, Iran</h5>
-                <p><i>Ich habe als leitender Forscher im Circuit Design Lab des Electronics Research Center (ERC) gearbeitet.<br>
-                  Meine Hauptaufgabe war es, mit meiner Wissenschaft und meinen Ideen Master- und Doktoranden dabei zu helfen, die Probleme zu überwinden, auf die sie auf dem Weg zum Abschluss stoßen.<br>
+                <p><i>Meine Hauptverantwortung als AI-Forscher bestand darin, AI-basierte Projekte (hauptsächlich Computer Vision-Aufgaben) in Zusammenarbeit mit Doktoranden und Masterstudenten durchzuführen.<br>
                   Das Unterrichten von maschinellem Lernen, Deep Learning und Python-Programmierung war ebenfalls eine meiner Pflichten. <br>
                   Die Wartung von Computern und Laboreinrichtung lag auch in meiner Verantwortung.</i></p>
               </div>
