--- a/index.html
+++ b/index.html
@@ -507,8 +507,7 @@
                 <h3>AI Reseracher</h3>
                 <h4>Iran University of Science and Technology</h4>
                 <h5>Tehran, Iran</h5>
-                <p><i>I worked as the head-researcher in Circuit Design Lab in Electronics Research Center (ERC).<br>
-                  My main responsibility was to support Master's and PhD students to overcome the problems they encounter in their way to graduation with my knowledge and ideas.<br>
+                <p><i>My main responsibility as an AI-Researcher was to carry out AI-based projects (mostly Computer Vision tasks) with the collaboration of PhD and Masters Student.<br>
                   Teaching Machine Learning, Deep Learning, and Python programming was also one of my duties. <br>
                   Maintaining computers and equipment in the lab was my other responsibility.</i></p>
               </div>
