changing about section job description

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div id="about-right" class="wow fadeInRight" data-wow-duration="1s">
                   <p><strong>Hi, I'm Arash.</strong> I have a Master's Degree in Digital Electronics Systems and graduated as the best student of the year in my field of study from Iran University of Science and Technology, where I have obtained my Bachelor's as well. <br>
                     <br>
-                    I currently work at the Electronics Research Center (ERC) at Iran University of Science and Technology (IUST) as a researcher. My main responsibility is to help Master's and PhD students to overcome the problems they encounter in their way to graduation. I also have the experience to work as an English translator, which sharpened my English skills. <br>
+                    I currently work at Iran University of Science and Technology (IUST) as an AI-researcher. My main responsibility as an AI-Researcher was to carry out AI-based projects (mostly Computer Vision tasks) with the collaboration of PhD and Masters Student. Teaching Machine Learning and Deep Learning Algorithms and Frameworks is also one of my duties. I also have the experience to work as an English translator, which sharpened my English skills. <br>
                     <br>
                     Machine Learning is my main speciality. I studied machine learning algorithms in the last few years to become a master in this area. Computer vision, reinforcement learning, GANs, and natural language processing are the main topics I studied about. I have the experience to work with both TensorFlow (and of course Keras API) and PyTorch frameworks as well. You can find out more about my skills in the Skills section. <br>
                     <br>
