Adding Gpu programming specifically

--- a/de.html
+++ b/de.html
@@ -329,7 +329,7 @@
                   <div class="col-md-8 skill-information" id="skill-programming-information">
                     <div class="skill-information-inner">
                       <h4 class="text-center">Programmiersprachen</h4>
-                      <p class="text-justify">Ich kenne viele verschiedene Programmiersprachen für verschiedene Zwecke.</p>
+                      <p class="text-justify">Ich kenne viele verschiedene Programmiersprachen für verschiedene Zwecke, von Coding für CLI- und GUI-Applications bis hin zum die GPU-Programmierung und Entwurf von Algorithmen für künstliche Intelligenz.</p>
                       <ul class="text-left">
                         <li><em>Python</em></li>
                         <li><em>C / C++ / Cuda C</em></li>
