--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                   <div class="col-md-8 skill-information" id="skill-programming-information">
                     <div class="skill-information-inner">
                       <h4 class="text-center">Programming Languages</h4>
-                      <p class="text-justify">I know a lot of different Programming Languages for different purposes.</p>
+                      <p class="text-justify">I know a lot of different Programming Languages for different purposes, from writing code for CLI and GUI applications to GPU programming and designing artificial intelligence algorithms.</p>
                       <ul class="text-left">
                         <li><em>Python</em></li>
                         <li><em>C / C++ / Cuda C</em></li>
