new resume style. Electronics deleted

--- a/de.html
+++ b/de.html
@@ -236,9 +236,8 @@
           <div id="skills-tabs">
             <ul class="text-center">
               <li><a href="#skills-machine-learning">Maschinellem Lernen</a></li>
-              <li><a href="#skills-electronics">Elektrotechnik</a></li>
               <li><a href="#skills-programming">Programmierung</a></li>
-              <li><a href="#skills-others">Andere Technische Fähigkeiten</a></li>
+              <li><a href="#skills-others">Tools und Umgebungen</a></li>
               <li><a href="#skills-languages">Sprachen</a></li>
             </ul>
 
@@ -265,42 +264,10 @@
                       <h4 class="text-center">Maschinelles Lernen</h4>
                       <p class="text-justify">Ich mag künstliche Intelligenz sehr gern. Daher habe ich die verwandten Algorithmen studiert, um ein Meister in diesem Bereich zu werden. Computer Vision, bestärkenden Lernen, GANs und Verarbeitung natürlicher Sprache sind die Hauptthemen, über die ich in den letzten Jahren studiert habe. Ich habe auch die Erfahrung, Studenten einige dieser Algorithmen beizubringen.</p>
                       <ul class="text-left">
-                        <li><em>Sci-Kit Learn / MLlib</em></li>
-                        <li><em>TensorFlow / PyTorch</em></li>
+                        <li><em>Sci-Kit Learn / Spark MLlib</em></li>
+                        <li><em>TensorFlow / PyTorch / Keras</em></li>
                         <li><em>OpenCV</em></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!--Skills Tabs Electronics-->
-            <div id="skills-electronics" class="skills-tab">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-4 skill-holder">
-                    <div class="skill-button skill-electronics-active-button">
-                      <a class="btn btn-general" id="btn-skill-electronics-micro" role="button">Mikrocontroller</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-electronics-pcb" role="button">Leiterplatten-Design</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-electronics-iot" role="button">Internet der Dinge</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-electronics-fpga" role="button">FPGA</a>
-                    </div>
-                  </div>
-                  <div class="col-md-8 skill-information" id="skill-electronics-information">
-                    <div class="skill-information-inner">
-                      <h4>Mikrocontroller</h4>
-                      <p class="text-justify">Ich habe ein solides Verständnis für die Hardware und Funktionalität von Mikrocontrollern. Neben der Bare-Metal-C- oder C ++ - Programmierung habe ich Erfahrung mit anderen Tools wie FreeRTOS in ARM- und ESP8266-Mikrocontrollern.</p>
-                      <ul class="text-left">
-                        <li><em>ARM</em></li>
-                        <li><em>AVR / PIC / Arduino</em></li>
-                        <li><em>FreeRTOS</em></li>
+                        <li><em>NLTK / spaCy</em></li>
                       </ul>
                     </div>
                   </div>
