--- a/index.html
+++ b/index.html
@@ -233,9 +233,8 @@
           <div id="skills-tabs">
             <ul class="text-center">
               <li><a href="#skills-machine-learning">Machine Learning</a></li>
-              <li><a href="#skills-electronics">Electronics</a></li>
               <li><a href="#skills-programming">Programming</a></li>
-              <li><a href="#skills-others">Other Technical Skills</a></li>
+              <li><a href="#skills-others">Tools and Environments</a></li>
               <li><a href="#skills-languages">Languages</a></li>
             </ul>
 
@@ -262,43 +261,10 @@
                       <h4 class="text-center">Machine Learning</h4>
                       <p class="text-justify">I am quite fond of artificial intelligence. Therefore, I have studied the related algorithms to become a master in this filed. Computer vision, reinforcement learning, GANs, and natural language processing are the main topics I studied about in the last few years. I also have the experience to teach some of these algorithms to students. </p>
                       <ul class="text-left">
-                        <li><em>Sci-Kit Learn / MLlib</em></li>
-                        <li><em>TensorFlow / PyTorch</em></li>
+                        <li><em>Sci-Kit Learn / Spark MLlib</em></li>
+                        <li><em>TensorFlow / PyTorch / Keras</em></li>
                         <li><em>OpenCV</em></li>
                         <li><em>NLTK / spaCy</em></li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <!--Skills Tabs Electronics-->
-            <div id="skills-electronics" class="skills-tab">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-4 skill-holder">
-                    <div class="skill-button skill-electronics-active-button">
-                      <a class="btn btn-general" id="btn-skill-electronics-micro" role="button">Microcontrollers</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-electronics-pcb" role="button">PCB Design</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-electronics-iot" role="button">Internet of Things</a>
-                    </div>
-                    <div class="skill-button">
-                      <a class="btn btn-general" id="btn-skill-electronics-fpga" role="button">FPGA</a>
-                    </div>
-                  </div>
-                  <div class="col-md-8 skill-information" id="skill-electronics-information">
-                    <div class="skill-information-inner">
-                      <h4>Microcontrollers</h4>
-                      <p class="text-justify">I have a solid understanding of the hardware and functionality of Microcontrollers. Other than bare-metal C or C++ Programming, I have experience utilising other tools such as FreeRTOS in ARM and ESP8266 Microcontrollers.</p>
-                      <ul class="text-left">
-                        <li><em>ARM</em></li>
-                        <li><em>AVR / PIC / Arduino</em></li>
-                        <li><em>FreeRTOS</em></li>
                       </ul>
                     </div>
                   </div>
