englishise special words in german version

--- a/de.html
+++ b/de.html
@@ -89,7 +89,7 @@
           
           <div id="home-heading">
             <h1 id="home-heading-name">Arash Heidari</h1> <br>
-            <h1 id="home-heading-title">Ingenieur für Maschinelles Lernen</h1>
+            <h1 id="home-heading-title">Machine Learning Engineer</h1>
           </div>
           
           <div id="home-btn">
@@ -153,7 +153,7 @@
                     <br>
                     Derzeit arbeite ich als AI-Forscher bei Iran University of Science and Technology (IUST). Meine Hauptverantwortung als AI-Forscher besteht darin, AI-basierte Projekte (hauptsächlich Computer Vision-Aufgaben) in Zusammenarbeit mit Doktoranden und Masterstudenten durchzuführen. Das Unterrichten von maschinellem Lernen und Deep Learning Algorithmen und Frameworks ist ebenfalls eine meiner Pflichten. Ich habe auch die Erfahrung, als Englischübersetzer zu arbeiten, was meine Englischkenntnisse schärfte. <br>
                     <br>
-                    Maschinelles Lernen ist meine Hauptspezialität. Ich habe in den letzten Jahren Algorithmen für maschinelles Lernen studiert, um ein Meister auf diesem Gebiet zu werden. Computer Vision, bestärkenden Lernen, GANs und Verarbeitung natürlicher Sprache sind die Hauptthemen, über die ich in den letzten Jahren studiert habe. Ich habe auch die Erfahrung, sowohl mit TensorFlow (und natürlich Keras API) als auch mit PyTorch zu arbeiten. Weitere Informationen zu meinen Fähigkeiten finden Sie im Sektion Fähigkeiten. <br>
+                    Machine Learning ist meine Hauptspezialität. Ich habe in den letzten Jahren Algorithmen für Machine Learning studiert, um ein Meister auf diesem Gebiet zu werden. Computer Vision, bestärkenden Lernen, GANs und Verarbeitung natürlicher Sprache sind die Hauptthemen, über die ich in den letzten Jahren studiert habe. Ich habe auch die Erfahrung, sowohl mit TensorFlow (und natürlich Keras API) als auch mit PyTorch zu arbeiten. Weitere Informationen zu meinen Fähigkeiten finden Sie im Sektion Fähigkeiten. <br>
                     <br>
                     Außerdem ist eines meiner Interessen das Programmieren. Ich beherrsche einige der Programmiersprachen wie Python, JavaScript, C / C ++ usw. Mein Interessengebiet in der Programmierdomäne, abgesehen von der Entwicklung eingebetteter Software, ist das GUI-Design und die Webentwicklung. <br>
                     <br>
@@ -186,7 +186,7 @@
                   <i class="about-icon fa fa-robot"></i>
                   <h3>Maschinelles<br>Lernen</h3>
                   <hr>
-                  <p>Ich habe ein großes Verständnis für traditionelle Algorithmen für maschinelles Lernen. Außerdem kann ich Deep Learning-Algorithmen und Frameworks verwenden, um Projekte durchzuführen.</p>
+                  <p>Ich habe ein großes Verständnis für traditionelle Algorithmen für Machine Learning. Außerdem kann ich Deep Learning-Algorithmen und Frameworks verwenden, um Projekte durchzuführen.</p>
                 </div>
               </div>
 
@@ -235,7 +235,7 @@
         <div class="content-box-md">
           <div id="skills-tabs">
             <ul class="text-center">
-              <li><a href="#skills-machine-learning">Maschinellem Lernen</a></li>
+              <li><a href="#skills-machine-learning">Machine Learning</a></li>
               <li><a href="#skills-programming">Programmierung</a></li>
               <li><a href="#skills-others">Tools und Umgebungen</a></li>
               <li><a href="#skills-languages">Sprachen</a></li>
@@ -247,7 +247,7 @@
                 <div class="row">
                   <div class="col-md-4 skill-holder">
                     <div class="skill-button skill-ml-active-button">
-                      <a class="btn btn-general" id="btn-skill-ml-ml" role="button">Maschinelles Lernen</a>
+                      <a class="btn btn-general" id="btn-skill-ml-ml" role="button">Machine Learning</a>
                     </div>
                     <div class="skill-button">
                       <a class="btn btn-general" id="btn-skill-ml-web" role="button">Web Crawling</a>
@@ -261,8 +261,8 @@
                   </div>
                   <div class="col-md-8 skill-information" id="skill-ml-information">
                     <div class="skill-information-inner">
-                      <h4 class="text-center">Maschinelles Lernen</h4>
-                      <p class="text-justify">Ich mag künstliche Intelligenz sehr gern. Daher habe ich die verwandten Algorithmen studiert, um ein Meister in diesem Bereich zu werden. Computer Vision, bestärkenden Lernen, GANs und Verarbeitung natürlicher Sprache sind die Hauptthemen, über die ich in den letzten Jahren studiert habe. Ich habe auch die Erfahrung, Studenten einige dieser Algorithmen beizubringen.</p>
+                      <h4 class="text-center">Machine Learning</h4>
+                      <p class="text-justify">Ich mag künstliche Intelligenz sehr gern. Daher habe ich die verwandten Algorithmen studiert, um ein Meister in diesem Bereich zu werden. Computer Vision, Reinforcement Learning, GANs und Natural Language Processing sind die Hauptthemen, über die ich in den letzten Jahren studiert habe. Ich habe auch die Erfahrung, Studenten einige dieser Algorithmen beizubringen.</p>
                       <ul class="text-left">
                         <li><em>Sci-Kit Learn / Spark MLlib</em></li>
                         <li><em>TensorFlow / PyTorch / Keras</em></li>
