--- a/de.html
+++ b/de.html
@@ -299,7 +299,7 @@
                       <p class="text-justify">Ich kenne viele verschiedene Programmiersprachen für verschiedene Zwecke, von Coding für CLI- und GUI-Applications bis hin zum die GPU-Programmierung und Entwurf von Algorithmen für künstliche Intelligenz.</p>
                       <ul class="text-left">
                         <li><em>Python</em></li>
-                        <li><em>C / C++ / Cuda C</em></li>
+                        <li><em>C / C++ / Cuda C / Embedded C</em></li>
                         <li><em>JavaScript</em></li>
                         <li><em>R</em></li>
                         <li><em>MATLAB</em></li>
