--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                       <p class="text-justify">I know a lot of different Programming Languages for different purposes, from writing code for CLI and GUI applications to GPU programming and designing artificial intelligence algorithms.</p>
                       <ul class="text-left">
                         <li><em>Python</em></li>
-                        <li><em>C / C++ / Cuda C</em></li>
+                        <li><em>C / C++ / Cuda C / Embedded C</em></li>
                         <li><em>JavaScript</em></li>
                         <li><em>R</em></li>
                         <li><em>MATLAB</em></li>
